fixxed spacing

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 
 body {
   font-family: "Poppins", sans-serif;
-  background-color: #171317;
+  background-color: #100f10;
   color: #ffffff;
 }
 
